dist_man1_MANS=

if BUILD_QUIQUITOCOIND
  dist_man1_MANS+=quiquitocoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=quiquitocoin-qt.1
endif

if BUILD_QUIQUITOCOIN_CLI
  dist_man1_MANS+=quiquitocoin-cli.1
endif

if BUILD_QUIQUITOCOIN_TX
  dist_man1_MANS+=quiquitocoin-tx.1
endif

if BUILD_QUIQUITOCOIN_UTIL
  dist_man1_MANS+=quiquitocoin-util.1
endif

if ENABLE_WALLET
if BUILD_QUIQUITOCOIN_WALLET
  dist_man1_MANS+=quiquitocoin-wallet.1
endif
endif
